Fixed small layout bug

--- a/site/src/styles/about/about/_values.scss
+++ b/site/src/styles/about/about/_values.scss
@@ -88,6 +88,7 @@
   display: flex;
   flex-direction: column;
   padding: 6% 14.6%;
+  width: 100%;
 
   @media (max-width: $about-break) {
     padding: 6% 10%;
